kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: kavita
        image: kavita
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "800Mi"
          requests:
            cpu: "150m"
            memory: "400Mi"
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: config
          mountPath: /config
        - name: comics
          mountPath: /comics
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: comics
        persistentVolumeClaim:
          claimName: comics-pvc
