kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
